2005-11-30  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/legacylist.py:
	Added handling of ICQ specific thingys, plus nicks.

	* src/legacy/icqt.py:
	Imported PyAIM changes.

2005-11-29  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/misciq.py:
	Fixed error packet to go back to user.

	* src/xdb/legacyaimtransport.py:
	Added aim-transport XDB plugin because you can use ICQ with it.

	* src/tlib/oscar.py:
	Added default exchange for createChat.

	* src/groupchat.py:
	Readded groupchat to see if it does indeed work with ICQ.

	* src/disco.py:
	* src/jabw.py:
	* src/legacy/__init__.py:
	* src/legacy/legacylist.py:
	* src/session.py:
	* src/utils.py:
	Imported directly from PyAIM, with some minor mods.

	* src/legacy/glue.py:
	Imported from PyAIM with a lot of mods for ICQ.

	* src/legacy/legacyiq.py:
	Imported barebones legacyiq.

	* config_example.xml:
	Added PyAIM new config options.

2005-11-28  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/avatar.py:
	* src/config.py:
	* src/contact.py:
	* src/daemonize.py:
	* src/debug,py:
	* src/globals.py:
	* src/lang.py:
	* src/langs/__init__.py:
	* src/langs/cs.py:
	* src/langs/de.py:
	* src/langs/en.py:
	* src/langs/es.py:
	* src/langs/fr.py:
	* src/langs/nl.py:
	* src/langs/pl.py:
	* src/langs/ru.py:
	* src/langs/sv.py:
	* src/main.py:
	* src/misciq.py:
	* src/register.py:
	* src/sasl.py:
	* src/tlib/domish.py:
	* src/tlib/jabber/jid.py:
	* src/tlib/jabber/xmpp_stringprep.py:
	* src/tlib/oscar.py:
	* src/webadmin/handler.py:
	* src/xdb/__init__.py:
	* src/xdb/mysql.py:
	* src/xdb/template.py:
	* src/xdb/xmlfiles.py:
	* src/xmlconfig.py:
	Imported directly from PyAIM, with some minor mods.

	* src/stats.py:
	Removed since we don't use it anymore.

2005-09-05  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	Cut off password at 8 characters, which is ICQ's limit.

2005-08-24  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	Set defaults for ip address related variables.
